# noodles

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
src/agents/diagram_builder/: __init__.py  diagram_builder.py
src/agents/edge_builder/: __init__.py  edge_builder.py
src/agents/node_builder/: __init__.py  node_builder.py
src/agents/pr_analyzer/: __init__.py  pr_analyzer.py
src/agents/pr_analyzer/call_graph_builder/: call_graph_builder.py
src/agents/pr_analyzer/full_graph_builder/: __init__.py  full_graph_builder.py
src/agents/repo_analyzer/: repo_analyzer.py  rerun_diagrams.py
src/agents/repo_analyzer/call_graph_builder/: call_graph_builder.py
src/agents/repo_analyzer/diagram_builder/: diagram_builder.py
src/agents/repo_analyzer/full_graph_builder/: __init__.py  full_graph_builder.py
src/agents/repo_analyzer/result_17a97e8bf25d/: call_graph.json  diagram_Add_comment_reaction.mmd  diagram_Add_edge_to_diagram.mmd  diagram_Add_node_to_diagram.mmd  diagram_Build_mermaid_diagrams.mmd  diagram_Build_repository_analysis.mmd  diagram_Build_repository_call_graph.mmd  diagram_Enrich_graph_with_agent_analysis.mmd  diagram_Execute_CLI_analyzer.mmd  diagram_Execute_CLI_tool.mmd  diagram_Execute_PR_analysis_pipeline.mmd  diagram_Fetch_installation_access_token.mmd  diagram_Generate_diagram_files.mmd  diagram_Orchestrate_PR_analysis.mmd  diagram_Parse_CLI_and_start_analysis.mmd  diagram_Parse_CLI_arguments.mmd  diagram_Parse_arguments_and_analyze.mmd  diagram_Parse_arguments_and_generate_diagram.mmd  diagram_Process_webhook_and_trigger_analysis.mmd  diagram_Route_Lambda_events.mmd  diagram_Update_analysis_completion.mmd  diagram_Update_or_post_comment.mmd  diagram_Upload_results_to_storage.mmd  diagram_main.mmd  end_points.json  start_points.json
src/archive/unslop/: __main__.py  cli.py  diagram.py  overlay.py  unslop_dir_management.py
src/archive/unslop/templates/: d2_template.d2
src/llm/: __init__.py  anthropic.py  config.py  gemini.py  groq.py  huggingface.py  openai.py  pricing.py  provider.py
src/noodles/: __init__.py  cli.py
src/noodles/agents/: __init__.py
src/noodles/agents/diagram_builder/: diagram_builder.py
src/noodles/llm/: __init__.py  groq.py
src/noodles/mcp/: __init__.py  cache.py  graph_queries.py  server.py
src/noodles/viewer/: __main__.py  data_loader.py
src/unslop/: cli.py  code2diagram.py  llm.py  manifest.py  overlay.py
src/unslop/templates/: overlay.html
src/utils/: __init__.py  sanitize.py
src/viewer/: __main__.py  data_loader.py  server.py
src/viewer/static/: index.html
tests/: test_call_graph_builder.py  test_llm_provider.py
(+21 files in other folders)
