[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "noodles"
version = "0.2.0"
description = "AI-powered code visualization and call graph analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "unslop-xyz" }]
license = { file = "LICENSE" }
keywords = ["code-visualization", "call-graph", "ast", "mermaid", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.0.0",
  "google-genai>=1.0.0",
  "pathspec>=0.12.1",
  "pywebview>=4.3.2",
  "python-dotenv>=1.0.0",
  "tree-sitter-language-pack>=0.13.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.3.0",
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/unslop-xyz/noodles"
Issues = "https://github.com/unslop-xyz/noodles/issues"

[project.scripts]
noodles = "noodles.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/noodles"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.pytest_asyncio]
mode = "auto"
